Add native docker images w/ build workflow
Rebased, cleaned-up version of PR #292, which adds Docker images that
do not rely on Wine, with a GitHub Actions workflow to build and push
Docker images to ghcr.io.

Compared with #292, this:
 - is based on 4397ac2 (2024-03-06) instead of d84d456 (2023-07-31)
 - has no changes to newline styless, so the diff is easier to read
 - adds instructions to readme.md on building deps/gcc.Dockerfile
 - fix case on gcc docker image (must be lowercase apparently)
 - fixes typos
 - streamlines and simplifies the GitHub Actions workflow
 - disables arm64 image builds because they keep hanging in the GitHub
   Actions environment

Resolves #290
Resolves #304